I made plantExperiment.html which I fixed the unaligned tables on. Then I deleted the original plants.html and renamed plantExperiment.html to plants.html to keep the linlks.

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ h2 {
 
 /* Formatting figures inside tables */
 figure {
-  width: 45%;
+display: block;
   text-align: center;
   font-style: auto;
   font-size: smaller;
